--- a/lesson1.html
+++ b/lesson1.html
@@ -196,8 +196,8 @@
                 teachers and students from all over the world.
               </p>
               <div class="price-details">
-                <p class="price">£5.99</p>
-                <p class="duration">per month</p>
+                <span class="price">£5.99</span>
+                <span class="duration">per month</span>
               </div>
             </li>
             <li class="price-item">
@@ -212,8 +212,8 @@
                 Interactive group classes with expert teachers. Free 7-day trial
               </p>
               <div class="price-details">
-                <p class="price">£12.99</p>
-                <p class="duration">per month</p>
+                <span class="price">£12.99</span>
+                <span class="duration">per month</span>
               </div>
             </li>
             <li class="price-item">
@@ -229,8 +229,8 @@
                 only $1
               </p>
               <div class="price-details">
-                <p class="price">£12.99</p>
-                <p class="duration">per month</p>
+                <span class="price">£12.99</span>
+                <span class="duration">per month</span>
               </div>
             </li>
           </ul>
