--- a/lesson1.html
+++ b/lesson1.html
@@ -25,8 +25,11 @@
         /></a>
         <nav>
           <ul class="site-nav list">
-            <li class="nav-item"><a href="#" class="nav-link link">Home</a></li>
             <li class="nav-item">
+              <a href="#" class="nav-link current link">Home</a>
+            </li>
+            <li class="nav-item">
+              k
               <a href="#" class="nav-link link">Skills</a>
             </li>
             <li class="nav-item">
