--- a/lesson1.html
+++ b/lesson1.html
@@ -13,6 +13,10 @@
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
 
     <link rel="stylesheet" href="./styles/styles.css" />
   </head>
@@ -29,7 +33,6 @@
               <a href="#" class="nav-link current link">Home</a>
             </li>
             <li class="nav-item">
-              k
               <a href="#" class="nav-link link">Skills</a>
             </li>
             <li class="nav-item">
@@ -51,10 +54,12 @@
     <main>
       <section class="section hero">
         <div class="hero-container container">
-          <h1 class="main-title">Learn Any Foreign Language</h1>
+          <h1 class="main-title animate__animated animate__tada">
+            Learn Any Foreign Language
+          </h1>
           <div class="lamp-svg">
             <svg width="119.65" height="119.65">
-              <use href="./images/symbol-defs.svg#icon-bulb-icon"></use>
+              <use href="./images/icons.svg#icon-bulb-icon"></use>
             </svg>
           </div>
           <p class="hero-text">
