--- a/lesson1.html
+++ b/lesson1.html
@@ -21,6 +21,7 @@
 
     <link rel="stylesheet" href="./styles/styles.css" />
     <link rel="stylesheet" href="./styles/media.css" />
+    <script src="practice js/practive.js"></script>
   </head>
 
   <body>
